# fuscum

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  devenv.nix  devenv.yaml  flake.nix
.github/: dependabot.yml
.github/workflows/: build-with-nix.yml  ci.yml  devenv.yaml
crates/fuscum/: Cargo.toml
crates/fuscum-cli/: Cargo.toml
crates/fuscum-cli/src/: analysis.rs  arg.rs  discovery.rs  main.rs  output.rs  submission.rs  summary.rs  visual.rs
crates/fuscum-cli/templates/: network.html
crates/fuscum/benches/: kgram_bench.rs
crates/fuscum/src/: doc.rs  fingerprint.rs  hash.rs  kgram.rs  lib.rs  preprocess.rs  winnow.rs
crates/fuscum/src/hash/: rabin_karp.rs  rolling_hasher.rs
crates/fuscum/src/preprocess/: lang.rs  text.rs  tree.rs
crates/fuscum/src/preprocess/snapshots/: fuscum__preprocess__lang__tests__cpp.snap  fuscum__preprocess__lang__tests__go.snap  fuscum__preprocess__lang__tests__java.snap  fuscum__preprocess__lang__tests__javascript.snap  fuscum__preprocess__lang__tests__ruby.snap  fuscum__preprocess__lang__tests__rust_lang.snap  fuscum__preprocess__lang__tests__typescript.snap
crates/fuscum/src/snapshots/: fuscum__fingerprint__tests__it_works.snap  fuscum__fingerprint__tests__with_text_preprocessor.snap  fuscum__kgram__tests__rolling_k_gram.snap  fuscum__kgram__tests__std_k_gram.snap  fuscum__winnow__tests__k_gram_works.snap
fixtures/langs/: c.c  cpp.cpp  go.go  java.java  javascript.js  python.py  ruby.rb  rust.rs  typescript.ts
flakes/: build-static.nix  build.nix  checks.nix
fuscum/: Cargo.toml
fuscum-cli/: Cargo.toml
fuscum-cli/src/: arg.rs  main.rs  visual.rs
fuscum-cli/templates/: network.html
fuscum/src/: fingerprint.rs  lib.rs  preprocess.rs
nix/: crossBuild.nix  default.nix  mkFormula.nix  mkFuscumCli.nix  mkSharedArgs.nix
src/: arg.rs  doc.rs  fingerprint.rs  lib.rs  main.rs  preprocess.rs  winnow.rs
(+9 files in other folders)
