[package]
name = "fuscum"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
ast = ["ast-grep-core", "ast-grep-language"]

[dependencies]
ast-grep-core = { version = "0.40.0", optional = true }
ast-grep-language = { version = "0.40.0", optional = true }
num-modular = "0.6.1"
typed-builder = "0.23.0"

[dev-dependencies]
insta = "1.41.1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "kgram_bench"
harness = false
